# dl_toolkits

./: .gitignore
cpp/: CMakeLists.txt
cpp/cmake/: Cuda.cmake
cpp/src/: .predict.cpp.swp  classification_caffe.cpp  evaluate_main.cxx  latency_timer.cpp  predict.cpp  predict_main.cxx  timing_profiler.cpp  timing_profiler.h
cpp/src/lib/: classification_caffe.cpp  classification_caffe.h  latency_timer.h
doc/: common_commands.md  dl_process.md  menu.md  parse_tag.md  wash.py
doc/cpp/: evaluate.md  predict.md
doc/python/: acc_pre_recall.md  accurancy.md  compare_model.md  compare_result.md  generate_img_abspath_list.md  select_badcase.md
python/: acc_pre_recall.py  accurancy.py  add_prefix.py  add_tag.py  compare_model.py  compare_result.py  gen_camera_num_list.py  generate_img_abspath_list.py  get_record_by_ip.py  log_loss.py  parse_blur_json.py  parse_tag.py  print_duplicate_fn.py  remove_comlumn.py  remove_duplicate.py  remove_empty.py  result_half_google_1w  select_badcase.py  select_threshed_sample.py  show_imgs.py  util.py  wash.py
result_data/blur/: lenet_cls_with_tag_iter_100000.txt  lenet_cls_with_tag_iter_120000.txt  lenet_cls_with_tag_iter_140000.txt  lenet_cls_with_tag_iter_160000.txt  lenet_cls_with_tag_iter_180000.txt  lenet_cls_with_tag_iter_20000.txt  lenet_cls_with_tag_iter_200000.txt  lenet_cls_with_tag_iter_40000.txt  lenet_cls_with_tag_iter_60000.txt  lenet_cls_with_tag_iter_80000.txt
result_data/blur_compare/: google_half_10000.txt  google_light_30000.txt
result_data/blur_google/: google_iter_10000.txt  google_iter_15000.txt  google_iter_20000.txt  google_iter_25000.txt  google_iter_30000.txt  google_iter_5000.txt  lenet_cls_with_tag_iter_190000.txt
result_data/blur_google/recall/: google_iter_30000.txt  google_light_iter_30000.txt  lenet_cls_with_tag_iter_20000.txt
result_data/blur_google_light/: google_light_iter_10000.txt  google_light_iter_15000.txt  google_light_iter_20000.txt  google_light_iter_25000.txt  google_light_iter_5000.txt
result_data/google_half_blur/: google_half_iter_15000.txt  google_half_iter_20000.txt  google_half_iter_25000.txt  google_half_iter_30000.txt  google_half_iter_5000.txt
result_data/google_half_blur_aug/: google_half_iter_10000.txt  google_half_iter_20000.txt  google_half_iter_30000.txt  google_half_iter_40000.txt  google_half_iter_50000.txt  google_half_iter_60000.txt
